# Team-Converge

./: .gitignore  DATASET_STRUCTURE_GUIDE.md  ECDD_Attention_Training.ipynb  ECDD_LaDeDa_Training_Colab.ipynb  README.md
ECDD_Experimentation/: COMPLETION_SUMMARY.md  ECDD_Collection1_Doc1.md  ECDD_Paper_DR_3_Architecture_v1.1.md  ECDD_Paper_DR_3_Experimentation.md  TODO_COMPREHENSIVE_AUDIT.md  manual_review_protocol.md  policy_contract.yaml  pyproject.toml  requirements.txt  setup.py
ECDD_Experimentation/ECDD_Experiment_Data/: __init__.py  checkpoint_system.py  data_lineage.json  generate_baselines.py
ECDD_Experimentation/ECDD_Experiment_Data/checkpoints/: 00023.json  00025.json  00088.json  00093.json  00099.json  00113.json  00136.json  00182.json  00276TOPP4.json  00327.json  00343.json  00390.json  00401.json  00403.json  00472.json  00473.json  00482.json  017EMQKL4D.json  01FCG0FF23.json  01_02__outside_talking_still_laughing__YVGY8LOK_frame.json  (+65 more)
ECDD_Experimentation/ECDD_Training_Data/: dataset_config.json
ECDD_Experimentation/Federated_Learning/: DESIGN_DECISIONS.md  FEDERATED_DRIFT_DETECTION_PLAN.md  FINAL_STATUS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SEQUENCE.md  IMPLEMENTATION_STATUS.md  LITERATURE_SURVEY.md  PROGRESS_LOG.md  README.md  SIMULATION_COMPLETE.md  USAGE_GUIDE.md  requirements.txt  test_core_quick.py  test_server_integration.py
ECDD_Experimentation/PhaseWise_Experiments_ECDD/: __init__.py  phase1_experiments.py  phase2_experiments.py  phase2_guardrails_experiments.py  phase3_experiments.py  phase4_experiments.py  phase5_experiments.py  phase6_experiments.py  phase7_experiments.py  phase8_experiments.py  requirements.txt
ECDD_Experimentation/Training/: __init__.py  requirements.txt
(+144 files in other folders)
